<?php die(); ?>
Akeeba LoginGuard 4.0.1
================================================================================
~ Converted all tables to InnoDB for better performance

Akeeba LoginGuard 4.0.0
================================================================================
+ Rewritten using FOF 4
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Akeeba LoginGuard 3.3.7
================================================================================
+ Now supports controller as alias for view under Joomla 4

Akeeba LoginGuard 3.3.7
================================================================================
~ All tables now have a PRIMARY KEY
# [LOW] The ip and ua columns were not always removed from the #__loginguard_tfa table
# [HIGH] Cannot use the SMS plugin (throws exception)
# [HIGH] Cannot register new WebAuthn authenticators
# [LOW] PHP Notice using JLoader::registerNamespace on Joomla 4

Akeeba LoginGuard 3.3.6
================================================================================
- Dropped PHP 7.1 support
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking Akeeba LoginGuard

Akeeba LoginGuard 3.3.5
================================================================================
+ Allow changing the code generation time period for Code by Email
~ Replace zero datetime with nullable datetime (gh-94)
# [LOW] You can see, but not use, the Methods page as a guest (gh-95)

Akeeba LoginGuard 3.3.4
================================================================================
+ Option to forcibly enable the Email plugin for everyone (gh-91)
~ WebAuthn: JavaScript now loads deferred
~ Remember Me: Remove inline JavaScript
~ Code refactoring for minimum compatibility with PHP 7.1, Joomla 3.9