@@ -385,6 +385,49 @@ class PlgLoginguardU2f extends CMSPlugin
 		// Get the media version
 		$mediaVersion = Container::getInstance('com_loginguard')->mediaVersion;
 
+		try
+		{// Load the options from the record (if any), or from the entire method if the allowEntryBatching flag is set.
+			$registrations = $this->getRegistrations($record);
+			/**
+			 * The following code looks stupid. An explanation is in order.
+			 *
+			 * What we normally want to do is save the authentication data returned by getAuthenticateData into the session.
+			 * This is what is sent to the U2F key through the Javascript API and signed. The signature is posted back to
+			 * the form as the "code" which is read by onLoginGuardTfaValidate. That method will read the authentication
+			 * data from the session and pass it along with the key registration data (from the database) and the
+			 * authentication response (the "code" submitted in the form) to the U2F library for validation.
+			 *
+			 * Validation will work as long as the challenge recorded in the encrypted AUTHENTICATION RESPONSE matches, upon
+			 * decryption, the challenge recorded in the AUTHENTICATION DATA.
+			 *
+			 * I observed that for whatever stupid reason the browser was sometimes sending TWO requests to the server's
+			 * captive login page but only rendered the FIRST. This meant that the authentication data sent to the key had
+			 * already been overwritten in the session by the "invisible" second request. As a result the challenge would
+			 * not match and we'd get a validation error.
+			 *
+			 * The code below will attempt to read the authentication data from the session first. If it exists it will NOT
+			 * try to replace it (technically it replaces it with a copy of the same data - same difference!). If nothing
+			 * exists in the session, however, it WILL store the (random seeded) result of the getAuthenticateData method.
+			 * Therefore the first request to the captive login page will store a new set of authentication data whereas the
+			 * second, "invisible", request will just reuse the same data as the first request, fixing the observed issue in
+			 * a way that doesn't compromise security.
+			 *
+			 * In case you are wondering, yes, the data is removed from the session in the onLoginGuardTfaValidate method.
+			 * In fact it's the first thing we do after reading it, preventing constant reuse of the same set of challenges.
+			 *
+			 * That was fun to debug - for "poke your eyes with a rusty fork" values of fun.
+			 */
+			$u2fAuthData     = $this->u2f->getAuthenticateData($registrations);
+			$u2fAuthData     = $this->container->platform->getSessionVar('u2f.authentication', base64_encode(serialize($u2fAuthData)), 'com_loginguard');
+			$u2fAuthData     = unserialize(base64_decode($u2fAuthData));
+			$u2fAuthDataJSON = json_encode($u2fAuthData);
+			$this->container->platform->setSessionVar('u2f.authentication', base64_encode(serialize($u2fAuthData)), 'com_loginguard');
+		}
+		catch (Exception $e)
+		{
+			return [];
+		}
+
 		// We are going to load a JS file and use custom on-load JS to intercept the loginguard-captive-button-submit button
 		HTMLHelper::_('script', 'plg_loginguard_u2f/u2f-api.min.js', [
 			'version'       => $mediaVersion,
@@ -416,44 +459,6 @@ class PlgLoginguardU2f extends CMSPlugin
 		Text::script('PLG_LOGINGUARD_U2F_ERR_JS_CLIENTCONFIGNOTSUPPORTED');
 		Text::script('PLG_LOGINGUARD_U2F_ERR_JS_INELIGIBLE_SIGN');
 		Text::script('PLG_LOGINGUARD_U2F_ERR_JS_TIMEOUT');
-
-		// Load the options from the record (if any), or from the entire method if the allowEntryBatching flag is set.
-		$registrations = $this->getRegistrations($record);
-
-		/**
-		 * The following code looks stupid. An explanation is in order.
-		 *
-		 * What we normally want to do is save the authentication data returned by getAuthenticateData into the session.
-		 * This is what is sent to the U2F key through the Javascript API and signed. The signature is posted back to
-		 * the form as the "code" which is read by onLoginGuardTfaValidate. That method will read the authentication
-		 * data from the session and pass it along with the key registration data (from the database) and the
-		 * authentication response (the "code" submitted in the form) to the U2F library for validation.
-		 *
-		 * Validation will work as long as the challenge recorded in the encrypted AUTHENTICATION RESPONSE matches, upon
-		 * decryption, the challenge recorded in the AUTHENTICATION DATA.
-		 *
-		 * I observed that for whatever stupid reason the browser was sometimes sending TWO requests to the server's
-		 * captive login page but only rendered the FIRST. This meant that the authentication data sent to the key had
-		 * already been overwritten in the session by the "invisible" second request. As a result the challenge would
-		 * not match and we'd get a validation error.
-		 *
-		 * The code below will attempt to read the authentication data from the session first. If it exists it will NOT
-		 * try to replace it (technically it replaces it with a copy of the same data - same difference!). If nothing
-		 * exists in the session, however, it WILL store the (random seeded) result of the getAuthenticateData method.
-		 * Therefore the first request to the captive login page will store a new set of authentication data whereas the
-		 * second, "invisible", request will just reuse the same data as the first request, fixing the observed issue in
-		 * a way that doesn't compromise security.
-		 *
-		 * In case you are wondering, yes, the data is removed from the session in the onLoginGuardTfaValidate method.
-		 * In fact it's the first thing we do after reading it, preventing constant reuse of the same set of challenges.
-		 *
-		 * That was fun to debug - for "poke your eyes with a rusty fork" values of fun.
-		 */
-		$u2fAuthData     = $this->u2f->getAuthenticateData($registrations);
-		$u2fAuthData     = $this->container->platform->getSessionVar('u2f.authentication', base64_encode(serialize($u2fAuthData)), 'com_loginguard');
-		$u2fAuthData     = unserialize(base64_decode($u2fAuthData));
-		$u2fAuthDataJSON = json_encode($u2fAuthData);
-		$this->container->platform->setSessionVar('u2f.authentication', base64_encode(serialize($u2fAuthData)), 'com_loginguard');
 
 		$this->container->platform->addScriptOptions('akeeba.LoginGuard.u2f.authData', $u2fAuthData);
 
